--- a/Views/Services/Index.cshtml
+++ b/Views/Services/Index.cshtml
@@ -9,7 +9,6 @@
 
 <!-- Custom CSS -->
 <link rel="stylesheet" href="~/css/Services.css">
-<!--<link rel="stylesheet" href="~/css/TRANSGLASS.css"> -->
 
 <div class="container">
     <h1 class="text-center mb-5">@ViewData["Title"]</h1>
@@ -28,14 +27,13 @@
                         <p class="card-text service-description">@Html.DisplayFor(modelItem => item.Description)</p>
                         <!-- Action Buttons -->
                         <div class="text-center">
-                            <a class="btn btn-primary btn-sm" asp-area="" asp-controller="Workers" asp-route-speciality="@item.Name" asp-action="Index">View Available Workers</a>
+                            <a class="btn btn-primary btn-sm" asp-area="" asp-controller="Workers" asp-route-serviceId="@item.Service_Id" asp-action="Index">View Available Workers</a>
                         </div>
                     </div>
                 </div>
             </div>
         }
-    </div>
-</div>
+
 
 <!-- Include Bootstrap JS (Optional) -->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
