--- a/Views/Workers/Delete.cshtml
+++ b/Views/Workers/Delete.cshtml
@@ -12,16 +12,16 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ProfilePic_Id)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ProfilePic_Id)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Speciality)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Speciality)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Availability_Status)
@@ -41,10 +41,16 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Reviews)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Price)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Price)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Worke_Id" />
+        <input type="hidden" asp-for="Worker_Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
