--- a/Views/Workers/Details.cshtml
+++ b/Views/Workers/Details.cshtml
@@ -11,16 +11,16 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ProfilePic_Id)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ProfilePic_Id)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Speciality)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Speciality)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Availability_Status)
@@ -40,9 +40,15 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Reviews)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Price)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Price)
+        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Worke_Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.Worker_Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
