--- a/Views/Workers/Edit.cshtml
+++ b/Views/Workers/Edit.cshtml
@@ -12,16 +12,16 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Worke_Id" />
+            <input type="hidden" asp-for="Worker_Id" />
+            <div class="form-group">
+                <label asp-for="ProfilePic_Id" class="control-label"></label>
+                <input asp-for="ProfilePic_Id" class="form-control" />
+                <span asp-validation-for="ProfilePic_Id" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Speciality" class="control-label"></label>
-                <input asp-for="Speciality" class="form-control" />
-                <span asp-validation-for="Speciality" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Availability_Status" class="control-label"></label>
@@ -37,6 +37,11 @@
                 <label asp-for="Reviews" class="control-label"></label>
                 <input asp-for="Reviews" class="form-control" />
                 <span asp-validation-for="Reviews" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Price" class="control-label"></label>
+                <input asp-for="Price" class="form-control" />
+                <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
