--- a/Views/TimeSlots/Create.cshtml
+++ b/Views/TimeSlots/Create.cshtml
@@ -27,10 +27,14 @@
                     <input class="form-check-input" asp-for="IsBooked" /> @Html.DisplayNameFor(model => model.IsBooked)
                 </label>
             </div>
-            <div class="form-group">
-                <label asp-for="Worker_Id" class="control-label"></label>
-                <select asp-for="Worker_Id" class ="form-control" asp-items="ViewBag.Worker_Id"></select>
-            </div>
+
+            <select class="form-control" disabled>
+                <option value="@ViewBag.LastWorkerId">@ViewBag.LastWorkerId</option>
+            </select>
+
+
+
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
