--- a/Views/Bookings/Edit.cshtml
+++ b/Views/Bookings/Edit.cshtml
@@ -34,9 +34,9 @@
                 <span asp-validation-for="CustomerName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CustomerEmail" class="control-label"></label>
-                <input asp-for="CustomerEmail" class="form-control" />
-                <span asp-validation-for="CustomerEmail" class="text-danger"></span>
+                <label asp-for="CustomerContact" class="control-label"></label>
+                <input asp-for="CustomerContact" class="form-control" />
+                <span asp-validation-for="CustomerContact" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
