--- a/Views/Bookings/Index.cshtml
+++ b/Views/Bookings/Index.cshtml
@@ -22,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.CustomerName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CustomerEmail)
+                @Html.DisplayNameFor(model => model.CustomerContact)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.AgreeToTerms)
@@ -47,7 +47,7 @@
                 @Html.DisplayFor(modelItem => item.CustomerName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CustomerEmail)
+                @Html.DisplayFor(modelItem => item.CustomerContact)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.AgreeToTerms)
