--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,162 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<!DOCTYPE html>
+<html lang="en">
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- External CSS -->
+    <link rel="stylesheet" href="css/MainPage.style.min.css">
+    <link rel="stylesheet" href="vendor/select2/select2.min.css">
+    <link rel="stylesheet" href="vendor/owlcarousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="vendor/lightcase/lightcase.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Work+Sans:300,400,700" rel="stylesheet">
+
+    <!-- CSS -->
+
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+    <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+
+
+</head>
+<body data-spy="scroll" data-target="#navbar" class="static-layout">
+
+
+    <div class="jumbotron d-flex align-items-center">
+        <div class="container text-center">
+           <!-- <h1 class="display-1 mb-4">QU<br>FX</h1> -->
+            <h1 style="border: none">   <img class="display-1 mb-4" src="img/Logo.png" alt=""> </h1>
+        </div>
+        <div class="rectangle-1"></div>
+        <div class="rectangle-2"></div>
+        <div class="rectangle-transparent-1"></div>
+        <div class="rectangle-transparent-2"></div>
+        <div class="circle-1"></div>
+        <div class="circle-2"></div>
+        <div class="circle-3"></div>
+        <div class="triangle triangle-1">
+            <img src="img/obj_triangle.png" alt="">
+        </div>
+        <div class="triangle triangle-2">
+            <img src="img/obj_triangle.png" alt="">
+        </div>
+        <div class="triangle triangle-3">
+            <img src="img/obj_triangle.png" alt="">
+        </div>
+        <div class="triangle triangle-4">
+            <img src="img/obj_triangle.png" alt="">
+        </div>
+    </div>
+
+    <!-- Move this section below the jumbotron -->
+    <div id="features" class="bg-white">
+        <div class="container">
+            <div class="section-content">
+                <!-- Section Title -->
+                <div class="title-wrap mb-5 fade-up " >
+                    <h2 class="section-title">
+                       A website for all your work to be done
+                    </h2>
+                    <p class="section-sub-title">Praesent commodo cursus magna, vel scelerisque nisl consectetur et. <br> pharetra augue. Donec id elit non mi.</p>
+                </div>
+                <!-- End of Section Title -->
+                <div class="row">
+                    <!-- Features Holder-->
+                    <div class="col-md-10 offset-md-1 features-holder">
+                        <div class="row">
+                            <!-- Features Item -->
+                            <div class="col-md-4 col-sm-12 text-center mt-4">
+                                <div class="shadow rounded feature-item p-4 mb-4 fade-up" >
+                                    <div class="my-4">
+                                        <i class="lnr lnr-cog fs-40"></i>
+                                    </div>
+                                    <h4>Easy to Use</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                </div>
+                                <div class="shadow rounded feature-item p-4 mb-4 fade-up" >
+                                    <div class="my-4">
+                                        <i class="lnr lnr-frame-contract fs-40"></i>
+                                    </div>
+                                    <h4>Prodessional Skilled Workers</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                </div>
+                            </div>
+                            <!-- End of Feature Item -->
+                            <!-- Features Item -->
+                            <div class="col-md-4 col-sm-12 text-center">
+                                <div class="shadow rounded feature-item p-4 mb-4 fade-up" >
+                                    <div class="my-4">
+                                        <i class="lnr lnr-bubble fs-40"></i>
+                                    </div>
+                                    <h4>Full Support</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                </div>
+                                <div class="shadow rounded feature-item p-4 mb-4 fade-up" >
+                                    <div class="my-4">
+                                        <i class="lnr lnr-magic-wand fs-40"></i>
+                                    </div>
+                                    <h4>25 Skilled Services</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                </div>
+                            </div>
+                            <!-- End of Feature Item -->
+                            <!-- Features Item -->
+                            <div class="col-md-4 col-sm-12 text-center mt-4">
+                                <div class="shadow rounded feature-item p-4 mb-4 fade-up" >
+                                    <div class="my-4">
+                                        <i class="lnr lnr-clock fs-40"></i>
+                                    </div>
+                                    <h4>Ontime Appointments</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                </div>
+                                <div class="shadow rounded feature-item p-4 mb-4 fade-up">
+                                    <div class="my-4">
+                                        <i class="lnr lnr-thumbs-up fs-40"></i>
+                                    </div>
+                                    <h4>Best Price</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                </div>
+                            </div>
+                            <!-- End of Feature Item -->
+                        </div>
+                    </div>
+                    <!-- End of Features Holder-->
+
+                    </div>
+            </div>
+        </div>
+    </div>
+    
+
+    
+
+    <!-- External JS -->
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+    <script src="vendor/bootstrap/popper.min.js"></script>
+    <script src="vendor/bootstrap/bootstrap.min.js"></script>
+    <script src="vendor/select2/select2.min.js "></script>
+    <script src="vendor/owlcarousel/owl.carousel.min.js"></script>
+    <script src="vendor/stellar/jquery.stellar.js" type="text/javascript" charset="utf-8"></script>
+    <script src="vendor/isotope/isotope.min.js"></script>
+    <script src="vendor/lightcase/lightcase.js"></script>
+    <script src="vendor/waypoints/waypoint.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Main JS -->
+    <script src="js/MainPage.app.min.js "></script>
+    <script src="//localhost:35729/livereload.js"></script>
+</body>
+</html>
