--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,15 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ServiceWorkerWebsite</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ServiceWorkerWebsite.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" asp-append-version="true"/>
+
+    
+    
 </head>
-<body>
+<body >
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav id="header-navbar"  class="navbar  navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ServiceWorkerWebsite</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">QuickFix</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,25 +32,109 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Services" asp-action="Index">Services</a>
                         </li>
-                        
+
+                       
+                       
+                    </ul>
+
+                    <ul class="navbar-nav">
+
+                        <li class="nav-item">
+
+                            <a class="navbar-nav text-dark" style="float:right" asp-area="" asp-controller="Services" asp-action="Index">Login &nbsp | &nbsp </a>
+                          
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="navbar-nav text-dark" asp-area="" asp-controller="Services" asp-action="Index">  Sign Up</a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div  class="container">
+        <main role="main" data-spy="scroll" class="pb-3">
+            <!-- External CSS -->
+            <link rel="stylesheet" href="css/MainPage.style.min.css">
+            <link rel="stylesheet" href="vendor/select2/select2.min.css">
+            <link rel="stylesheet" href="vendor/owlcarousel/owl.carousel.min.css">
+            <link rel="stylesheet" href="vendor/lightcase/lightcase.css">
+            <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+            <!-- Fonts -->
+      
+
+            <!-- CSS -->
+
+           
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+            <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+
+
+
             @RenderBody()
+
+          
+
+            <!-- External JS -->
+            <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+            <script src="vendor/bootstrap/popper.min.js"></script>
+            <script src="vendor/bootstrap/bootstrap.min.js"></script>
+            <script src="vendor/select2/select2.min.js "></script>
+            <script src="vendor/owlcarousel/owl.carousel.min.js"></script>
+            <script src="vendor/stellar/jquery.stellar.js" type="text/javascript" charset="utf-8"></script>
+            <script src="vendor/isotope/isotope.min.js"></script>
+            <script src="vendor/lightcase/lightcase.js"></script>
+            <script src="vendor/waypoints/waypoint.min.js"></script>
+            <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+            <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+
+            <!-- Main JS -->
+            <script src="js/MainPage.app.min.js "></script>
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" style="padding-top: 20px; background-color: darkviolet; ">
         <div class="container">
-            &copy; 2024 - ServiceWorkerWebsite - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <div class="inner container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-12 d-flex align-items-center">
+                    </div>
+                    <div class="col-lg-4 col-md-12 d-flex align-items-center">
+                        <p class="mx-auto text-center mb-0" style="color: white; font: bold">&copy; 2024 QuickFix.</p>
+                    </div>
+
+                    <div   class="col-lg-4 col-md-12">
+                        <nav class="nav nav-mastfoot justify-content-center" >
+                            <a style="color:  wheat" class="nav-link" href="#">
+                                <i style="  " class="fab fa-facebook-f"></i>
+                            </a>
+                            <a style="color:  wheat" class="nav-link" href="#">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a style="color:  wheat" class="nav-link" href="#">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a style="color:  wheat" class="nav-link" href="#">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <a style="color:  wheat" class="nav-link" href="#">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </nav>
+                    </div>
+
+                </div>
+            </div>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+   
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
