--- a/Views/Bookings/Details.cshtml
+++ b/Views/Bookings/Details.cshtml
@@ -29,10 +29,10 @@
             @Html.DisplayFor(model => model.CustomerName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CustomerEmail)
+            @Html.DisplayNameFor(model => model.CustomerContact)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CustomerEmail)
+            @Html.DisplayFor(model => model.CustomerContact)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.AgreeToTerms)
