--- a/Views/Workers/Index.cshtml
+++ b/Views/Workers/Index.cshtml
@@ -6,11 +6,34 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
 <div class="container">
-    <div class="row">
+
+    <div class="jumbotron d-flex align-items-center" style="position : absolute; height:100% ; ">
+        <div class="container text-center">
+            <!--    <h1 class="display-1 mb-4"><br></h1>-->
+        </div>
+        <div class="rectangle-1"></div>
+        <div class="rectangle-2"></div>
+        <div class="rectangle-transparent-1"></div>
+        <div class="rectangle-transparent-2"></div>
+        <div class="circle-1"></div>
+        <div class="circle-2"></div>
+        <div class="circle-3"></div>
+        <div class="triangle triangle-1">
+            <img src="img/obj_triangle.png" alt="">
+        </div>
+        <div class="triangle triangle-2">
+            <img src="img/obj_triangle.png" alt="">
+        </div>
+        <div class="triangle triangle-3">
+            <img src="img/obj_triangle.png" alt="">
+        </div>
+        <div class="triangle triangle-4">
+            <img src="img/obj_triangle.png" alt="">
+        </div>
+    </div>
+    <div class="row" style="padding-top:70px">
         @foreach (var item in Model)
         {
             <div class="col-md-4 mb-4">
